<resources>
    <string name="app_name">WowTime</string>
    <string name="action_settings">设置</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">下一个</string>
    <string name="previous">返回</string>
    <string name="cancel">取消</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="test_message">输入信息</string>
    <string name="button_send">发送</string>
    <string name="phone_hint">请输入手机号…</string>
    <string name="captcha_hint">请输入验证码…</string>
    <string name="username_hint">请输入用户名…</string>
    <string name="get_captcha_hint">获取验证码</string>
    <string name="password_hint">请输入密码…</string>
    <string name="logo_description">This is the logo description.</string>
    <string name="login_usepw_hint">使用账号密码登录</string>
    <string name="login_useregis_hint">没有账号?注册</string>
    <string name="login_message">登录</string>

    <string name="register_message">注册</string>
    <string name="login_usecapt_hint">使用验证码登录</string>
    <string name="white_list_name">白名单</string>
    <string name="friends_list_name">朋友们</string>
    <string name="friends_list_sort_hint">搜索…</string>
    <string name="credit_detail_list_name">积分明细</string>

    <string name="task_success">任务完成!</string>
    <string name="back_to_home">返回首页</string>

    <!-- Strings used for clock setting-->
    <string name="clock_setting_title">设置闹钟</string>
    <string name="clock_setting_store">存储</string>
    <string name="clock_setting_tag_title">标签</string>
    <string name="clock_setting_tag_default"> 闹钟 > </string>
    <string name="clock_setting_ring_title">铃声</string>
    <string name="clock_setting_ring_default">雷达 ></string>
    <string name="clock_setting_game_title">小游戏</string>
    <string name="clock_setting_game_default">随机 ></string>
    <string name="ring_setting_title">设置铃声</string>
    <string name="game_setting_title">设置小游戏</string>
    <string name="alarm_list_title">闹钟</string>

    <string name="personinfo_name">个人信息</string>
    <string name="friendslist_name">好友列表</string>
    <string name="creditdetail_name">积分详情</string>


    <!--strings for navigation-->
    <string name="navigation_person_info">个人信息</string>
    <string name="navigation_login">登录</string>
    <string name="navigation_clock">闹钟</string>
    <string name="navigation_away_from_phone">远离手机</string>
    <string name="navigation_friends">好友</string>
    <string name="navigation_statistic">统计</string>
    <string name="navigation_achievement">成就</string>
    <string name="navigation_setting">设置</string>
    <string name="navigation_about">关于</string>

    <!--strings for navigation-->
    <string name="statistic_day_title">一日总结</string>

    <string name="statistic_day_content">来看看今天干了什么吧</string>
    <string name="statistic_no_data">今天还没有定计划哦</string>
    <string name="statistic_week_title">近7日总结</string>
    <string name="statistic_year_title">2020总览</string>
    <string name="statistic_switch_today">今日</string>
    <string name="statistic_switch_week">本周</string>
    <string name="statistic_switch_year">今年</string>


    <!--strings for task list-->
    <string name="task_list">任务列表</string>
    <string name="task_name">任务名称</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- strings for about -->
    <string name="about_title">WOWTIME</string>
    <string name="about_content">本产品自成一体，运行于安卓系统，基于帮助用户管理时间的目的，主要为用户提供两方面的服务。一方面用一定的激励机制帮助用户指定个性化的作息计划。另一方面则是提供远离手机的服务，使用户在一段时间内不去启动手机，从而帮助用户减少手机的依赖。</string>

    <!-- strings for game -->
    <string name="shaking_notice">摇晃手机</string>
    <string name="blowing_notice">吹一吹</string>
    <!-- string for calculate -->
    <string name="calculate_description">请回答下列算式的答案</string>
    <string name="calculate_title">算式</string>
    <string name="calculate_answer">0</string>
    <string name="calculate_handson">提交</string>
    <string name="title_activity_screen_saver">屏保</string>
    <string name="screen_saver_button">放弃</string>
    <string name="screen_saver_content">为中华崛起\n而读书</string>

    <string name="pomodoro_list_title">番茄钟</string>
    <string name="pomodoro_start_button">开始！</string>

    <!--strings for menu-->
    <string name="menu_exit">退出</string>

    <!--strings for random number input -->
    <string name="number_input_title">请输入下列数字：</string>
    <string name="random_number_handson">提交</string>
</resources>