<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
     android:layout_width="match_parent">

<!--    <group android:checkableBehavior="none">-->
<!--        <item-->
<!--            android:id="@+id/menu_main_start_all"-->
<!--            android:title="start_all"-->
<!--            app:showAsAction="never" />-->
<!--        <item-->
<!--            android:id="@+id/menu_main_pause_all"-->
<!--            android:title="pause_all"-->
<!--            app:showAsAction="never" />-->
<!--    </group>-->

    <group>
        <item
            android:id="@+id/menu_main_setting"
            android:title="@string/navigation_setting"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_main_about"
            android:title="@string/navigation_about"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_main_exit"
            android:title="@string/menu_exit"
            app:showAsAction="never" />
    </group>
</menu>
