<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--    xmlns:tools="http://schemas.android.com/tools"-->
    <!--    tools:context="com.example.wowtime.MainActivity"-->
    <!--    <item-->
    <!--        android:id="@+id/action_settings"-->
    <!--        android:orderInCategory="100"-->
    <!--        android:title="@string/action_settings"-->
    <!--        app:showAsAction="never" />-->
    <group>
        <!--        android:id="@+id/activity_menu_main"-->
        <!--        android:checkableBehavior="single"-->
        <item
            android:id="@id/navigation_person_info"
            android:icon="@drawable/ic_round_person_24"
            android:title="@string/navigation_person_info" />
        <item
            android:id="@id/navigation_clock"
            android:icon="@drawable/ic_round_alarm_on_24"
            android:title="@string/navigation_clock" />
    </group>
    <group>
        <item
            android:id="@id/navigation_about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/navigation_about" />
    </group>
</menu>