<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/navigation_person_info"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/navigation_person_info"
        android:name="com.example.wowtime.TestActivity"
        android:label="@string/navigation_person_info"
        tools:layout="@layout/fragment_nav_list">
        <!--        <action-->
        <!--            android:id="@+id/action_FirstFragment_to_SecondFragment"-->
        <!--            app:destination="@id/SecondFragment" />-->
    </fragment>

    <fragment
        android:id="@+id/navigation_clock"
        android:name="com.example.wowtime.AnotherActivity"
        android:label="@string/navigation_clock"
        tools:layout="@layout/fragment_nav_list">
        <!--        <action-->
        <!--            android:id="@+id/action_SecondFragment_to_FirstFragment"-->
        <!--            app:destination="@id/FirstFragment" />-->
    </fragment>

    <activity
        android:id="@+id/navigation_about"
        android:name="com.example.wowtime.AnotherActivity"
        android:label="@string/navigation_about" />

</navigation>