<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculateGameActivity">

    <TextView
        android:id="@+id/calculate_description"
        android:layout_width="249dp"
        android:layout_height="36dp"
        android:layout_marginTop="92dp"
        android:text="@string/calculate_description"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/calculate_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/calculate_handson"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/calculate_handson"
        android:layout_width="106dp"
        android:layout_height="49dp"
        android:layout_marginBottom="204dp"
        android:onClick="judgeAnswer"
        android:text="@string/calculate_handson"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/calculate_title"
        android:layout_width="181dp"
        android:layout_height="41dp"
        android:layout_marginBottom="92dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/calculate_title"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/calculate_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>